in function now works.
Updated to use newer jaxb libraries
Optional function parameters can now be added/removed
Added missing filter functions.