@@ -1,2 +1,2 @@
 #!/bin/sh
-/usr/bin/java -jar /usr/share/sldeditor/SLDEditor.jar
+/usr/bin/java -jar /usr/share/sldeditor/SLDEditor.jar --add-modules=java.xml.bind --add-modules=java.activation -XX:+IgnoreUnrecognizedVMOptions
